...
  
  let cellButton: UIButton = {
    let button = UIButton()
    button.translatesAutoresizingMaskIntoConstraints = false
    button.addTarget(self, action: #selector(likeButtonClicked), for: .touchUpInside)
    button.isHidden = true
    button.accessibilityIdentifier = "like button off"
    return button
  }()
  
  private let gradientLayer: CAGradientLayer = {
    let gradient = CAGradientLayer()
    gradient.colors = [
...
  }
  
  // MARK: - Methods to update UI
  func setIsLiked(_ isLiked: Bool) {
    let likeImage = isLiked ? UIImage(named: "LikeOn") : UIImage(named: "LikeOff")
    cellButton.setImage(likeImage, for: .normal)
    cellButton.accessibilityIdentifier = isLiked ? "like button on" : "like button off"
  }
  
  func setLabelText(with text: String?) {
    cellLabel.text = text ?? ""
  }
  
...
